--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff5656" />
-    <meta name="description" content="Website for VivaDecora movie curation" />
+    <meta name="description" content="Website for Viva Decora movie curation" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>VivaDemovie</title>
+    <title>VivaDeMovie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
